@@ -40,15 +40,15 @@ public interface Calculus
 	public double distance(Vertex2D start, Vertex2D end);
 	
 	/**
-	 * Returns the distance between two points.
+	 * Returns square distance between two points.
 	 * This distance is evaluated by using metrics at a given point.
 	 *
 	 * @param start  the start node
 	 * @param end  the end node
 	 * @param vm  the vertex on which metrics is evaluated
-	 * @return the distance between these two points.
+	 * @return square distance between these two points.
 	 */
-	public double distance(Vertex2D start, Vertex2D end, Vertex2D vm);
+	public double distance2(Vertex2D start, Vertex2D end, Vertex2D vm);
 	
 	/**
 	 * Returns the 2D radius of the unit ball centered at a point.
