@@ -3,6 +3,12 @@ Sun Nov 11 22:53:19 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 	* src/org/jcae/mesh/amibe/patch/Mesh2D.java: Store compGeomStack
 	top value into a private member to avoid many calls to
 	compGeomStack.peek().
+	* src/org/jcae/mesh/amibe/ds/Mesh.java
+	  src/org/jcae/mesh/amibe/metrics/Metric2D.java
+	  src/org/jcae/mesh/amibe/patch/Mesh2D.java
+	  src/org/jcae/mesh/amibe/patch/Calculus.java: Rename distance()
+	into distance2(), this method now returns square distance to
+	avoid unnecessary calls to Math.sqrt().
 
 Sun Nov 11 01:45:43 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
